	   in audio playback when loops happened early and audio
	   packets decoded into multiple frames.
	 - Reverted a video optimization which was creating problems
	   in reverse playback.
	 - Improved video playback when scrubbing which was skipping
	   some frames incorrectly.  This change should remove all
	   warnings of missing video frames.
	 - Bug fixed adjusting of EDL when stereo was on.
	 - Made music only tracks not report an invalid index for
	   channel selection.
	 - Removed stereo interlaced as it was not working properly.

v2.9.6   - Made channel selection work with toggles more intuitively.
	   Going to N.x with a 'r' hotkey and then pressing 'r' 
	   again will bring you back to "N", not "Color" as before.
	 - Made channel selection smarter to avoid reloads when
	   not needed.  Only switching full layers or multiparts
	   will cause reloads now.
	 - Fixed Unshown Frames (UF:) in Hud Display to correctly
	   count unshown frames.  Previously it would count them
	   with an addition of one to it each time.
	 - Fixed a random crash that would happen when LUT was 
	   activated and the sequence was still being loaded.
	 - Fixed color picker not showing the right colors on
	   stereo images once cache was cleared.
	 - Fixed a memory leak of thumbnail pictures.
	 - Added an elapsed and remaining timings to saving
	   a sequence or a movie.
	 - Bug fixed Saving of OpenGL Snapshots for a sequence of
	   images.  Previously it would crash.

v2.9.5   - Improved OpenEXR loader by a factor of 2.
	 - Made OpenEXR saver default to PIZ wavelet compression,
	   instead of None.
	 - Made audio track selection not throw when invalid tracks
	   are used.  If an invalid track is used, the audio is
	   muted ( track is -1 ).
	 - Same thing with subtitle track.
	 - Bug fixed Media Info Window not updating on frame change.
	 - Made images saved with left. or right. prefix not change 
	   to %V. prefix automatically.
